--- a/app1/package.json
+++ b/app1/package.json
@@ -54,9 +54,10 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "isomorphic-unfetch": "^3.1.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.1.0",
+    "react-query": "^2.23.1",
     "react-router-dom": "^5.2.0"
   }
 }
