make root config use local import map

--- a/cms/package.json
+++ b/cms/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "yarn http-server ./data -p 3005"
+    "start": "yarn http-server ./data -p 3005 --cors"
   },
   "dependencies": {
     "http-server": "^14.1.1"
